--- a/记录平时内容.md
+++ b/记录平时内容.md
@@ -1,5 +1,24 @@
+## JS
 1. co模块
 
 	用来处理Generator不能自执行，如果不是非要使用这种异步方式的话 可以使用async/await，promise;
 
 	[co模块](http://npm.taobao.org/package/co)
+
+---
+
+## CSS
+
+1. grid布局
+
+栅格布局  适用于 多行文本布局
+
+flexbox  适用于 单行文本布局
+
+参考资料：
+
+1. [Grid布局基础用法](http://www.css88.com/archives/8510/comment-page-1)
+	
+
+
+
