--- a/记录平时内容.md
+++ b/记录平时内容.md
@@ -18,7 +18,11 @@ flexbox  适用于 单行文本布局
 参考资料：
 
 1. [Grid布局基础用法](http://www.css88.com/archives/8510/comment-page-1)
-	
 
 
+2.安卓上行高居中文字偏上bug
+
+
+参考资料：
+1. [完美解决移动Web小于12px文字居中的问题](http://www.cnblogs.com/zjzhome/p/4913741.html)
 
