新增一些优雅代码分享

--- a/note/前端面试题目整理.md
+++ b/note/前端面试题目整理.md
@@ -16,7 +16,7 @@ koa1中间件实现于generator函数 ， koa2实现基于async/await实现。
 
 以中间值为基数 原数组去掉中间数后遍历数组 大于基数的值放right数组，小于放left数组，递归 最终就是排序完的结果。
 
-代码如下：
+代码如下：`
 
 ```Quicksort
 
