更新优雅代码分享

--- a/note/一些优雅代码分享.md
+++ b/note/一些优雅代码分享.md
@@ -50,23 +50,24 @@ function converToNum (arr) {
 
 ```
 
-> 给定一个数组，找到出现奇数次的数字。
+> 给定一个只会出现一个奇数的数组，找到出现奇数次的那个数字。
 
 一般解法：
 
 ```rude
 function test (arr) {
     var _obj = {}
-    var _arr = []
+    var result
     arr.map((item, index) => {
         !_obj[index] ? _obj[index] = 1 : _obj[index] = _obj[index]++
     })
     for (var i in _obj) {
         if (_obj[i] % 2 != 0) {
-            _arr.push(i)
+            result = _obj[i]
+            break
         }
     }
-    return _arr
+    return result
 }
 
 ```
@@ -76,7 +77,7 @@ function test (arr) {
 ```grace
 
 function test (arr) {
-    return arr.re
+    return arr.reduce((a, b) => a ^ b)
 }
 
 ```
@@ -142,6 +143,26 @@ function test (arr) {
 
 > 给定一串单词，返回最短单词的长度。
 
+一般解法：
+
+```
+function test (word) {
+    return word.split(' ').reduce((prev, current) => {
+        return prev.length > current.length ? current : prev
+    })
+} 
+
+```
+
+优雅解法：
+
+```
+function test (word) {
+    return Math.min.apply(null, word.split(' ').map(item => item.length))
+} 
+
+```
+
 > 创建一个计算digital root的函数。
 
 digital root是数字中各位数字的递归总和。给定n，取n各位数字之和。如果该值是两位数或者更多，则继续以这种方式递归，直到产生一位数字，这个数字就是digital root。这只适用于自然数。
@@ -171,3 +192,33 @@ digital_root(493193)
 => 1 + 1
 => 2
 ```
+
+一般解法：
+
+```
+function test (num) {
+    var result = 0
+    function reduce (num) {
+        var temp = 0
+        num.toString().split('').forEach(item => temp+= Number(item))
+        return result = temp
+    }
+    reduce(num)
+    while (result >= 10) {
+       reduce(result)
+    }
+    return result
+}
+
+```
+
+优雅解法：
+
+```
+function test (num) {
+    return (n-1) % 9 + 1
+}
+
+```
+
+WTF!!! 这么简单？？仔细想想，运用了一个定理‘所有位相加之和是9的倍数的数字能被9整除’，原数组每一个数相加最后之和就看做一个数字，如果这个数字除以9之后的余数必定小于9，完全符合题解，至于为什么先-1后再+1，为了防止9的倍数被整除余数为0的情况，堪称神来之笔！
