更新柯里化函数

--- a/note/前端面试题目整理.md
+++ b/note/前端面试题目整理.md
@@ -10,7 +10,7 @@
 koa1中间件实现于generator函数 ， koa2实现基于async/await实现。
 遵循先进后出的洋葱模型原则
 
-[图解koa实现原理](https://segmentfault.com/img/bVMAtq?w=498&h=349)
+![图解koa实现原理](https://segmentfault.com/img/bVMAtq?w=498&h=349)
 
 2.快速排序
 
