--- a/note/记录平时项目遇到的坑.md
+++ b/note/记录平时项目遇到的坑.md
@@ -1,7 +1,13 @@
 
 # 前端路上坑的点点滴滴
 
-> ## webpack 3.5.5
+## JS
+
+---
+
+## WebPack
+
+> ### webpack 3.5.5
 
 1. 设置全局环境变量 (process.env.NODE_ENV) 来针对不同环境进行配置
 
@@ -44,13 +50,22 @@ cross-env NODE_ENV=prod webpack --config build/webpack.config.js
 1. [webpack3.5 使用环境变量](http://www.css88.com/doc/webpack/guides/environment-variables/)
 2. [cross-env](https://www.npmjs.com/package/cross-env)
 
-> ## CSS媒体查询引起安卓上键盘弹起页面变小的坑
+---
+
+## CSS
+
+> ### CSS媒体查询引起安卓上键盘弹起页面变小的坑
 
 ![@media (orientation: landscape)的坑1](//wx4.sinaimg.cn/mw690/006ANKB8gy1fqy3u2zb1gj316w0kfdkt.jpg)
 
 ![@media (orientation: landscape)的坑2](//wx3.sinaimg.cn/mw690/006ANKB8gy1fqy44ccj22j31ag0d8whm.jpg)
 
-@media (orientation: landscape)
+	@media (orientation: landscape)
 
-引起的原因在这个媒体查询上 本来目的是 判断手机横屏下做一些样式修改，为何在安卓下唤醒软键盘就出发了？？
+	引起的原因在这个媒体查询上 本来目的是 判断手机横屏下做一些样式修改，为何在安卓下唤醒软键盘就出发了？？测试下来 貌似用 竖屏 `orientation: portrait` 媒体查询下 在-竖屏唤醒键盘无效，不唤醒键盘有效，此类媒体查询有坑，慎用，建议用js判断可见区域宽高判断是横竖屏。
+
+> ### 元素按住:active时触发子级:before添加遮盖层，不能触发子级本身的点击事件
+
+	解决办法： 给子级元素加 一行css属性 `pointer-events: none`
+
 
