新增 relite源码解读 笔记

--- a/note/记录平时项目遇到的坑.md
+++ b/note/记录平时项目遇到的坑.md
@@ -54,18 +54,30 @@ cross-env NODE_ENV=prod webpack --config build/webpack.config.js
 
 ## CSS
 
-> ### CSS媒体查询引起安卓上键盘弹起页面变小的坑
-
-![@media (orientation: landscape)的坑1](//wx4.sinaimg.cn/mw690/006ANKB8gy1fqy3u2zb1gj316w0kfdkt.jpg)
-
-![@media (orientation: landscape)的坑2](//wx3.sinaimg.cn/mw690/006ANKB8gy1fqy44ccj22j31ag0d8whm.jpg)
-
-	@media (orientation: landscape)
-
-	引起的原因在这个媒体查询上 本来目的是 判断手机横屏下做一些样式修改，为何在安卓下唤醒软键盘就出发了？？测试下来 貌似用 竖屏 `orientation: portrait` 媒体查询下 在-竖屏唤醒键盘无效，不唤醒键盘有效，此类媒体查询有坑，慎用，建议用js判断可见区域宽高判断是横竖屏。
+* 20180427
 
 > ### 元素按住:active时触发子级:before添加遮盖层，不能触发子级本身的点击事件
 
 	解决办法： 给子级元素加 一行css属性 `pointer-events: none`
+
+* 20180502
+
+> ### CSS媒体查询引起安卓上键盘弹起页面变小的坑
+
+![@media (orientation: landscape)的坑1](http://wx4.sinaimg.cn/mw690/006ANKB8gy1fqy3u2zb1gj316w0kfdkt.jpg)
+
+![@media (orientation: landscape)的坑2](http://wx3.sinaimg.cn/mw690/006ANKB8gy1fqy44ccj22j31ag0d8whm.jpg)
+
+@media (orientation: landscape)
+
+引起的原因在这个媒体查询上 本来目的是 判断手机横屏下做一些样式修改，为何在安卓下唤醒软键盘就出发了？？测试下来 貌似用 竖屏 `orientation: portrait` 媒体查询下 在-竖屏唤醒键盘无效，不唤醒键盘有效，此类媒体查询有坑，慎用，建议用js判断可见区域宽高判断是横竖屏。
+
+
+
+## IMG
+
+* 20180503
+
+	雪碧图插件合并多个icon，每次引入新的icon，会重新计算合成新图，之前的icon位置也会发生变化，此时如果直接提交新的雪碧图至生产发生生产雪碧图icon错乱，最终通过每次给生成新的雪碧图放一个以时间命名的文件夹下来避免问题出现。
 
 
