--- a/记录平时内容.md
+++ b/记录平时内容.md
@@ -6,6 +6,13 @@
 	[co模块](http://npm.taobao.org/package/co)
 
 
+2. 计算中英文的总字符串
+
+中文编码 后范围 > 128
+
+英文编码后范围 0 <= params <= 128
+
+
 ---
 
 ## CSS
@@ -27,3 +34,83 @@ flexbox  适用于 单行文本布局
 参考资料：
 1. [完美解决移动Web小于12px文字居中的问题](http://www.cnblogs.com/zjzhome/p/4913741.html)
 
+
+3. SVG
+
+默认svg黑色背景 改变背景色需要设置 fill 属性
+
+```css
+<svg class="chart" xmlns="http://www.w3.org/2000/svg">
+	<circle cx="25" cy="25" r="20" stroke-width="6" class="bg_gray" style="stroke-dasharray: 126, 126;"></circle>
+	<circle cx="25" cy="25" r="20" stroke-width="6" class="bg_blue" style="stroke-dasharray: 89, 126;"></circle>
+</svg>
+
+.chart {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    stroke-dashoffset: 0;
+    stroke-linecap: butt;
+    fill: red;
+}
+.bg_gray{
+	stroke: #e5e5e5;
+}
+.bg_blue{
+	stroke: #39a7ee;
+}
+// stroke 指定svg边框颜色
+// stroke-dasharray 为svg边框设置虚线 比如10,10 先画10px 再空10px距离 再画10ox 再空10px距离 重复
+// stroke-dashoffset 定义虚线起始位置
+// stroke-linecap  定义边框的两边形状 butt  round  spuare
+
+```
+
+参考资料：
+
+1. [
+svg的stroke属性，神奇的描边](https://blog.csdn.net/ning0_o/article/details/54970474)
+
+
+4. position: sticky
+
+fixed和relative结合， 外层盒子高度必须大于父级盒子才会出现滚动条，滚动的时候指定子级top值（距离顶部多少px触发定位为fixed）
+
+举例：
+
+
+距离页面顶部大于20px，表现为 position:relative
+
+<img src="https://cloud.githubusercontent.com/assets/8554143/22968940/7dabb642-f3a7-11e6-8eba-e48cc56642dc.gif" alt="sticky-top-off">
+
+
+举例页面顶部小于20px，表现为 position:fixed
+
+<img src="https://cloud.githubusercontent.com/assets/8554143/22969004/c0cfee66-f3a7-11e6-995b-0b497360ca2b.gif" alt="sticky-top-on">
+
+
+```html
+<div class='outWrap'>
+  <div class='innerWrap'></div>
+</div>
+```
+
+```css
+.outWrap{
+  border: 10px solid blue;
+  height: 2000px;
+}
+
+.innerWrap{
+  height: 100px;
+  border: 2px solid red;
+  width: 100px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 200px;
+}
+
+```
